--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,16 +11,17 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
     <!-- font awesome -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
+        integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
     <!-- my css -->
     <link rel="stylesheet" href="css/style.css">
-    <!-- bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+
     <title>Boolzap</title>
 </head>
+
 <body>
     <div id="root">
-        
+
         <div class="container">
             <!-- left side -->
             <div id="l-side">
@@ -41,7 +43,7 @@
                     <div class="notifications-texts">
                         <div class="strong">Ricevi notifiche di nuovi messaggi</div>
                         <a href="#">Attiva le notifiche desktop</a>
-                    </div>           
+                    </div>
                 </div>
                 <div class="chat-search">
                     <div class="search-icon">
@@ -50,16 +52,17 @@
                     <input type="text" placeholder="Cerca o inizia una nuova chat">
                 </div>
                 <div class="contact-list">
-                    <div v-for="(contact, index) in contacts" class="contact">
+                    <div v-for="(contact, index) in contacts" class="contact"
+                        :class="(index == currentContact ? 'contact-active' : null)" @click="setIndexContact(index)">
                         <div class="l-contact">
                             <img :src="contacts[index].avatar" alt="Avatar Contatto">
                             <div class="info">
-                                <div class="contact-name">{{contacts[index].name}}</div>
-                                <div class="last-access">{{contacts[index].messages[0].text}}</div>
+                                <div class="contact-name">{{contact.name}}</div>
+                                <div class="last-message">{{contact.messages.slice(-1)[0].text}}</div>
                             </div>
                         </div>
                         <div class="r-contact">
-                            <div class="message-time">{{contacts[index].messages[0].date}}</div>
+                            <div class="message-time">{{contact.messages.slice(-1)[0].date}}</div>
                         </div>
                     </div>
                 </div>
@@ -69,10 +72,11 @@
             <div id="r-side">
                 <div class="contact-nav">
                     <div class="l-contact-icons">
-                        <img src="./img/avatar_1.jpeg" alt="Avatar Utente">
+                        <img :src="contacts[currentContact].avatar" alt="Avatar Utente">
                         <div class="contact-info">
-                            <div class="contact-name">Michele</div>
-                            <div class="last-access">Ultimo accesso alle ore 15:47</div>
+                            <div class="contact-name">{{contacts[currentContact].name}}</div>
+                            <div class="last-access">Ultimo accesso oggi alle ore
+                                {{contacts[currentContact].messages.slice(-1)[0].date}}</div>
                         </div>
                     </div>
                     <div class="r-contact-icons">
@@ -82,20 +86,24 @@
                     </div>
                 </div>
                 <div class="message-area">
+                    <div v-for="(message, index) in contacts[currentContact].messages" class="message"
+                        :class="(contacts[currentContact].messages[index].status == 'sent') ? 'message-sent' : 'message-received'">
+                        {{contacts[currentContact].messages[index].text}}
+                        <span class="message-date">{{contacts[currentContact].messages[index].date}}</span>
+                    </div>
+                    <div class="text-controls">
+                        <i class="far fa-smile"></i>
+                        <input type="text" placeholder="Scrivi un messaggio">
+                        <i class="fas fa-microphone"></i>
+                    </div>
                 </div>
-                <div class="text-controls">
-                    <i class="far fa-smile"></i>
-                    <input type="text" placeholder="Scrivi un messaggio">
-                    <i class="fas fa-microphone"></i>
-                </div>
+                <!-- /right side -->
             </div>
-            <!-- /right side -->
+
         </div>
-        
-    </div>
-    <!-- bootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-    <!-- my js -->
-    <script src="js/script.js"></script>
+
+        <!-- my js -->
+        <script src="js/script.js"></script>
 </body>
+
 </html>
