--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
                     <div class="search-icon">
                         <i class="fas fa-search"></i>
                     </div>
-                    <input type="text" placeholder="Cerca o inizia una nuova chat" v-model="contactText" @keydown.enter="filteredList()">
+                    <input type="text" placeholder="Cerca o inizia una nuova chat" v-model="search" @keydown.enter="filteredContacts()">
                 </div>
                 <div class="contact-list">
-                    <div v-for="(contact, index) in contacts" class="contact"
+                    <div v-for="(contact, index) in filteredContacts" class="contact" 
                         :class="(index == currentContact ? 'contact-active' : null)" @click="setIndexContact(index)">
                         <div class="l-contact">
-                            <img :src="contacts[index].avatar" alt="Avatar Contatto">
+                            <img :src="filteredContacts[index].avatar" alt="Avatar Contatto">
                             <div class="info">
                                 <div class="contact-name">{{contact.name}}</div>
                                 <div class="last-message">{{contact.messages.slice(-1)[0].text}}</div>
@@ -74,11 +74,10 @@
             <div id="r-side">
                 <div class="contact-nav">
                     <div class="l-contact-icons">
-                        <img :src="contacts[currentContact].avatar" alt="Avatar Utente">
+                        <img :src="filteredContacts[currentContact].avatar" alt="Avatar Utente">
                         <div class="contact-info">
-                            <div class="contact-name">{{contacts[currentContact].name}}</div>
-                            <div class="last-access">Ultimo accesso oggi alle ore
-                                {{contacts[currentContact].messages.slice(-1)[0].date}}</div>
+                            <div class="contact-name">{{filteredContacts[currentContact].name}}</div>
+                            <div class="last-access">Ultimo accesso oggi alle ore {{filteredContacts[currentContact].messages.slice(-1)[0].date}}</div>
                         </div>
                     </div>
                     <div class="r-contact-icons">
@@ -88,10 +87,10 @@
                     </div>
                 </div>
                 <div class="message-area">
-                    <div v-for="(message, index) in contacts[currentContact].messages" class="message"
-                        :class="(contacts[currentContact].messages[index].status == 'sent') ? 'message-sent' : 'message-received'">
-                        {{contacts[currentContact].messages[index].text}}
-                        <span class="message-date">{{contacts[currentContact].messages[index].date}}</span>
+                    <div v-for="(message, index) in filteredContacts[currentContact].messages" class="message"
+                    :class="(filteredContacts[currentContact].messages[index].status == 'sent') ? 'message-sent' : 'message-received'" >
+                    {{filteredContacts[currentContact].messages[index].text}}
+                    <span class="message-date">{{filteredContacts[currentContact].messages[index].date}}</span>
                     </div>
                     <div class="text-controls">
                         <i class="far fa-smile"></i>
